--- a/src/app/components/main/monitor/team/team.component.html
+++ b/src/app/components/main/monitor/team/team.component.html
@@ -1,31 +1,32 @@
-<ng-container *ngIf="clan">
-  <h3 *ngIf="cw">
+<h3 *ngIf="cw && clan">
+  <span [style.color]="clan.color | sanitizeCss">[{{clan.tag}}]</span>&nbsp;
+  <span>{{clan.name}} ({{clan.region | region}})</span>
+</h3>
+<span *ngIf="cw && clan" translate="monitor.cw.text"
+  [translateParams]="{ rank: clan.rank, league: 'monitor.cw.leagues.' + clan.mainRating.league | translate, division: clan.mainRating.division | roman, winrate: (clan.mainRating.wins/clan.mainRating.battles * 100) | number:'0.0-2' }">
+</span>
+<span *ngIf="!cw">
+  Avg Xp: {{team.xp | number:'0.0-0'}} Avg Winrate: {{team.winrate | number:'0.0-2'}}% Avg Battles:
+  {{team.battles | number:'0.0-0'}}
+</span>
+
+<a *ngIf="cw && clan" #weblink target="_blank" hidden="hidden"
+  href="{{ clan.region | wowsNumbers }}clan/{{clan.id}},/">Link</a>
+
+<p-contextMenu *ngIf="cw && clan" [target]="el.nativeElement" appendTo="body" [model]="items" triggerEvent="click">
+</p-contextMenu>
+
+<p-dialog *ngIf="cw && clan" [(visible)]="showDialog" [dismissableMask]="true" [modal]="true" appendTo="body"
+  [closable]="true">
+  <p-header>
     <span [style.color]="clan.color | sanitizeCss">[{{clan.tag}}]</span>&nbsp;
     <span>{{clan.name}} ({{clan.region | region}})</span>
-  </h3>
-  <span *ngIf="cw" translate="monitor.cw.text"
-    [translateParams]="{ rank: clan.rank, league: 'monitor.cw.leagues.' + clan.mainRating.league | translate, division: clan.mainRating.division | roman, winrate: (clan.mainRating.wins/clan.mainRating.battles * 100) | number:'0.0-2' }">
-  </span>
-  <span *ngIf="!cw">
-    Avg Xp: {{team.xp | number:'0.0-0'}} Avg Winrate: {{team.winrate | number:'0.0-2'}}% Avg Battles:
-    {{team.battles | number:'0.0-0'}}
-  </span>
-
-  <a *ngIf="cw" #weblink target="_blank" hidden="hidden" href="{{ clan.region | wowsNumbers }}clan/{{clan.id}},/">Link</a>
-
-  <p-contextMenu *ngIf="cw" [target]="el.nativeElement" appendTo="body" [model]="items" triggerEvent="click">
-  </p-contextMenu>
-
-  <p-dialog *ngIf="cw" [(visible)]="showDialog" [dismissableMask]="true" [modal]="true" appendTo="body" [closable]="true">
-    <p-header>
-      <span [style.color]="clan.color | sanitizeCss">[{{clan.tag}}]</span>&nbsp;
-      <span>{{clan.name}} ({{clan.region | region}})</span>
-    </p-header>
-    <ng-container *ngIf="clan.mainRating">
-      <h3>
-        Main Rating
-      </h3>
-      <pre>
+  </p-header>
+  <ng-container *ngIf="clan.mainRating">
+    <h3>
+      Main Rating
+    </h3>
+    <pre>
     League:         {{ 'monitor.cw.leagues.' +clan.mainRating.league | translate }}
     Division:       {{ clan.mainRating.division | roman }}
     Points:         {{ clan.mainRating.rating }}
@@ -34,13 +35,13 @@
     Longest Streak: {{ clan.mainRating.longestWinningStreak }}
     Current Streak: {{ clan.mainRating.currentWinningStreak }}
       </pre>
-    </ng-container>
+  </ng-container>
 
-    <ng-container *ngIf="clan.secondaryRating">
-      <h3>
-        Secondary Rating
-      </h3>
-      <pre>
+  <ng-container *ngIf="clan.secondaryRating">
+    <h3>
+      Secondary Rating
+    </h3>
+    <pre>
     League:         {{ 'monitor.cw.leagues.' +clan.secondaryRating.league | translate }}
     Division:       {{ clan.secondaryRating.division | roman }}
     Points:         {{ clan.secondaryRating.rating }}
@@ -49,10 +50,9 @@
     Longest Streak: {{ clan.secondaryRating.longestWinningStreak }}
     Current Streak: {{ clan.secondaryRating.currentWinningStreak }}
         </pre>
-    </ng-container>
-    <!-- <a routerLink="/wcw/{{clan.id}}">Learn more</a> -->
-  </p-dialog>
-</ng-container>
+  </ng-container>
+  <!-- <a routerLink="/wcw/{{clan.id}}">Learn more</a> -->
+</p-dialog>
 
 
 <!-- {
