--- a/src/app/components/main/monitor/player/player.component.html
+++ b/src/app/components/main/monitor/player/player.component.html
@@ -1,4 +1,5 @@
-<div class="info-wrapper" [class.me]="player.relation == 0"
+<div class="info-wrapper"
+  [ngClass]="{ 'me': player.relation == 0, 'bot': player.bot, 'hidden': player.hidden, 'player': !player.bot && !player.hidden, 'no-battles': !player.bot && !player.hidden && !player.shipStats }"
   (click)="openWowsNumbers(player)">
   <div id="name">
     <strong>
@@ -17,7 +18,7 @@
     Karma: <strong>{{player.karma}}</strong>
   </div>
   <div id="ship">
-    {{player.shipInfo.name}} (Tier {{player.shipInfo.tier | roman}})
+    <strong>{{player.shipInfo.name}}</strong> (Tier {{player.shipInfo.tier | roman}})
   </div>
   <div id="winrate">
     Winrate: <strong>{{player.shipStats?.winrate | number:'0.0-2'}}%</strong>
@@ -41,6 +42,17 @@
   <div id="avg-xp">
     <ng-container *ngIf="!cw">
       Avg Xp: <strong>{{player.shipStats?.averageXp | number:'0.0-0'}}</strong>
+    </ng-container>
+  </div>
+  <div id="message">
+    <ng-container *ngIf="player.hidden">
+      {{ 'monitor.hidden' | translate }}
+    </ng-container>
+    <ng-container *ngIf="player.bot">
+      {{ 'monitor.bot' | translate }}
+    </ng-container>
+    <ng-container *ngIf="!player.bot && !player.hidden && !player.shipStats">
+      {{ 'monitor.noBattles' | translate }}
     </ng-container>
   </div>
 </div>
