Changed description for WebConnect

--- a/src/app/components/main/topbar/connection/connection.component.html
+++ b/src/app/components/main/topbar/connection/connection.component.html
@@ -1,4 +1,5 @@
-<div class="iconWrapper" (click)="openQrDialog($event)">
+<div class="iconWrapper" (click)="openQrDialog($event)" [pTooltip]="'webConnect.desktop.title' | translate"
+tooltipPosition="bottom">
   <fa-icon [icon]="qrIcon" size="2x" [fixedWidth]="true"></fa-icon>
 </div>
 
