--- a/src/app/components/main/monitor/player/player.component.html
+++ b/src/app/components/main/monitor/player/player.component.html
@@ -1,5 +1,5 @@
 <div class="info-wrapper"
-  [ngClass]="{ 'me': player.relation == 0, 'bot': player.bot, 'hidden': player.hidden, 'player': !player.bot && !player.hidden, 'no-battles': !player.bot && !player.hidden && !player.shipStats }"
+  [ngClass]="{ 'me': player.relation == 0, 'bot': player.bot, 'hidden': player.hidden, 'player': !player.bot && !player.hidden, 'no-battles': !player.bot && !player.hidden && !player.shipStats, 'forceWhite': !config.coloredValues }"
   (click)="openWowsNumbers(player)">
   <div id="name">
     <strong>
@@ -9,10 +9,10 @@
     </strong>
   </div>
   <div id="ovr-winrate">
-    Overall Winrate: <strong>{{player.overallStats?.winrate | number:'0.0-2'}}%</strong>
+    Overall Winrate: <strong [style.color]="player.overallStats?.winrateColor | sanitizeCss">{{player.overallStats?.winrate | number:'0.0-2'}}%</strong>
   </div>
   <div id="ovr-battles">
-    Overall Battles: <strong>{{player.overallStats?.battles}}</strong>
+    Overall Battles: <strong [style.color]="player.overallStats?.battlesColor | sanitizeCss">{{player.overallStats?.battles}}</strong>
   </div>
   <div id="karma">
     Karma: <strong>{{player.karma}}</strong>
@@ -21,23 +21,23 @@
     <strong>{{player.shipInfo.name}}</strong> (Tier {{player.shipInfo.tier | roman}})
   </div>
   <div id="winrate">
-    Winrate: <strong>{{player.shipStats?.winrate | number:'0.0-2'}}%</strong>
+    Winrate: <strong [style.color]="player.shipStats?.winrateColor | sanitizeCss">{{player.shipStats?.winrate | number:'0.0-2'}}%</strong>
   </div>
   <div id="battles">
-    Battles: <strong>{{player.shipStats?.battles}}</strong>
+    Battles: <strong [style.color]="player.shipStats?.battlesColor | sanitizeCss">{{player.shipStats?.battles}}</strong>
   </div>
   <div id="wins">
     Wins: <strong>{{player.shipStats?.wins}}</strong>
   </div>
   <div id="pr">
     PR: <span [pTooltip]="'monitor.pr.poweredBy' | translate" tooltipPosition="bottom"
-      [style.color]="player.shipStats?.personalRating | pr | sanitizeCss"><strong>{{player.shipStats?.personalRating}}</strong></span>
+      [style.color]="player.shipStats?.personalRatingColor | sanitizeCss"><strong>{{player.shipStats?.personalRating}}</strong></span>
   </div>
   <div id="avg-damage">
-    Avg Damage: <strong>{{player.shipStats?.averageDamage | number:'0.0-0'}}</strong>
+    Avg Damage: <strong [style.color]="player.shipStats?.averageDamageColor | sanitizeCss">{{player.shipStats?.averageDamage | number:'0.0-0'}}</strong>
   </div>
   <div id="avg-frags">
-    Avg Frags: <strong>{{player.shipStats?.averageFrags | number:'0.0-1'}}</strong>
+    Avg Frags: <strong [style.color]="player.shipStats?.averageFragsColor | sanitizeCss">{{player.shipStats?.averageFrags | number:'0.0-1'}}</strong>
   </div>
   <div id="avg-xp">
     <ng-container *ngIf="!cw">
