Fixed errors after electron update and in the path detection routine

--- a/src/app/components/main/topbar/connection/qr-scan/qr-scan.component.html
+++ b/src/app/components/main/topbar/connection/qr-scan/qr-scan.component.html
@@ -20,7 +20,7 @@
         </p>
       </ng-container>
 
-      <zxing-scanner #scanner [scannerEnabled]="enabled" [device]="selectedDevice"
+      <zxing-scanner #scanner  [enable]="enabled" [device]="selectedDevice"
         (scanSuccess)="handleQrCodeResult($event)">
       </zxing-scanner>
 
