Fixed path detection when being overridden

--- a/src/app/components/main/settings/settings.component.html
+++ b/src/app/components/main/settings/settings.component.html
@@ -68,7 +68,7 @@
           <div class="ui-inputgroup">
             <input pInputText [title]="config.overwriteReplaysDirectory" type="text" pInputText [disabled]="true"
               [(ngModel)]="config.overwriteReplaysDirectory">
-            <button *ngIf="config.overwriteReplaysDirectory" (click)="config.overwriteReplaysDirectory = null" pButton type="button" icon="pi pi-times"></button>
+            <button *ngIf="config.overwriteReplaysDirectory" (click)="config.overwriteReplaysDirectory = ''" pButton type="button" icon="pi pi-times"></button>
             <button pButton type="button" icon="pi pi-folder" (click)="selectReplaysPath()"></button>
           </div>
         </div>
