Fixed badges in changelog list and added missing translations

--- a/src/app/components/main/topbar/connection/connection.component.html
+++ b/src/app/components/main/topbar/connection/connection.component.html
@@ -6,12 +6,12 @@ tooltipPosition="bottom">
 <p-overlayPanel #qrErrorDetails>
   <ng-container *isBrowser>
     <p>
-      {{ 'service.issues.token.browser' | translate }}
+      {{ 'service.issues.browser.noToken' | translate }}
     </p>
   </ng-container>
   <ng-container *isDesktop>
     <p>
-      {{ 'service.issues.token.desktop' | translate }}
+      {{ 'service.issues.desktop' | translate }}
     </p>
   </ng-container>
 </p-overlayPanel>
