--- a/src/app/components/main/changelogs/changelogs.component.html
+++ b/src/app/components/main/changelogs/changelogs.component.html
@@ -1,8 +1,8 @@
 <div class="container small changelog-container">
   <p-card class="list">
     <ul>
-      <li *ngFor="let entry of $changelogs | async" (click)="selectChangelog(entry)">
-        {{entry.changelog.version}}|{{entry.seen}}
+      <li *ngFor="let changelog of $changelogs | async" (click)="selectChangelog(changelog)">
+        {{changelog.version}}|{{isSeen(changelog)}}
       </li>
     </ul>
   </p-card>
