--- a/src/app/components/main/settings/settings.component.html
+++ b/src/app/components/main/settings/settings.component.html
@@ -55,7 +55,7 @@
         </div>
       </article>
     </section>
-    <section>
+    <section *isDesktop>
       <h3>{{ 'settings.miscellaneous.title' | translate }}</h3>
       <article>
         <caption>
