--- a/src/app/components/main/changelogs/changelog/changelog.component.html
+++ b/src/app/components/main/changelogs/changelog/changelog.component.html
@@ -1,4 +1,6 @@
 <ng-container *ngIf="changelog">
   <markdown [data]="changelog.markdown"></markdown>
-  <p-button *ngIf="ref" [label]="'changelogs.closeButton' | translate" (click)="ref.close()"></p-button>
+  <div class="align-right-wrapper" *ngIf="ref">
+    <p-button [label]="'changelogs.closeButton' | translate" [styleClass]="ui-button-success" (click)="ref.close()"></p-button>
+  </div>
 </ng-container>
