--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -4,6 +4,7 @@
 
 <main>
   <p-scrollPanel [style]="{width: '100%', height: '100%'}">
+    <div class="main-top-spacer"></div>
     <router-outlet></router-outlet>
   </p-scrollPanel>
 </main>
